# vjo

./: .gitignore  CMakeLists.txt  README.md  arm.py  optimize.py  plot_results.py  requirements.txt  run_sim.py  utils.py
cov/: cov_prop.py
fk/: __init__.py  arm.py  propagate.py
fk_covariance/: arm.py  propagate.py
include/vjo/: vjo.hpp
meshes/: box.sdf  capsule.sdf  cylinder.sdf  ellipsoid.sdf  model.sdf  table.sdf
meshes/001_chips_can/: chips_can.sdf  model.config
meshes/002_master_chef_can/: master_chef_can.sdf
meshes/003_cracker_box/: cracker_box.sdf
meshes/004_sugar_box/: sugar_box.sdf
meshes/005_tomato_soup_can/: tomato_soup_can.sdf
meshes/006_mustard_bottle/: mustard_bottle.sdf
meshes/007_tuna_fish_can/: tuna_fish_can.sdf
meshes/008_pudding_box/: pudding_box.sdf
meshes/011_banana/: banana.sdf
meshes/012_strawberry/: strawberry.sdf
meshes/013_apple/: apple.sdf
meshes/014_lemon/: lemon.sdf
meshes/015_peach/: peach.sdf
meshes/016_pear/: pear.sdf
meshes/017_orange/: orange.sdf
meshes/018_plum/: plum.sdf
meshes/024_bowl/: bowl.sdf
meshes/025_mug/: mug.sdf
meshes/026_sponge/: sponge.sdf
meshes/028_skillet_lid/: skillet_lid.sdf
meshes/029_plate/: plate.sdf
meshes/030_fork/: fork.sdf
meshes/031_spoon/: spoon.sdf
meshes/032_knife/: knife.sdf
meshes/033_spatula/: spatula.sdf
scripts/: arm.py  propagate.py
src/: main.cpp  vjo.cpp
vjo/: __init__.py  fk.py  sim.py  utils.py
